<resources>
    <string name="app_name" translatable="false">Stack</string>
    <string name="api_home_url" translatable="false">https://api.stackexchange.com/</string>
    <string name="repository_url" translatable="false">https://github.com/tylerbwong/stack</string>
    <string name="terms_url" translatable="false">https://github.com/tylerbwong/stack/blob/master/TERMS.md</string>
    <string name="privacy_url" translatable="false">https://github.com/tylerbwong/stack/blob/master/PRIVACY.md</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="badges">Badges</string>
    <string name="questions">Questions</string>
    <string name="linked">Linked</string>
    <string name="related">Related</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="drafts">Drafts</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="inbox">Inbox</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="unread_count">%1$d Unread</string>
    <string name="answers">Answers</string>
    <plurals name="votes">
        <item quantity="zero">%1$d Votes</item>
        <item quantity="one">%1$d Vote</item>
        <item quantity="many">%1$d Votes</item>
        <item quantity="other">%1$d Votes</item>
    </plurals>
    <string name="profile_summary">Summary</string>
    <string name="profile_activity">Activity</string>
    <string name="theme_title">Choose theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system_default">System default</string>
    <string name="nothing_here">Nothing here!</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="deep_link_path_not_supported">Stack can\'t handle this link yet!</string>
    <string name="deep_link_user_not_found">User not found on this site</string>
    <string name="log_in_success">Successfully logged in</string>
    <string name="log_in_title">Would you like to log in?</string>
    <string name="log_in_message"><![CDATA[Ask, answer, and comment. Get access to higher request quotas, drafts, and more. Be sure to review this site\'s <a href="https://stackoverflow.com/legal/terms-of-service">Terms of Service</a>, <a href="https://stackoverflow.com/legal/privacy-policy">Privacy Policy</a>, and <a href="https://stackoverflow.com/legal/acceptable-use-policy">Acceptable Use Policy</a>.]]></string>
    <string name="log_in_message_flag"><![CDATA[You must be logged in to flag this post. Be sure to review this site\'s <a href="https://stackoverflow.com/legal/terms-of-service">Terms of Service</a>, <a href="https://stackoverflow.com/legal/privacy-policy">Privacy Policy</a>, and <a href="https://stackoverflow.com/legal/acceptable-use-policy">Acceptable Use Policy</a>.]]></string>
    <string name="log_out_title">Would you like to log out?</string>
    <string name="log_out_message">You\'ll lose all of your current session data including saved drafts.</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="register_on_site_message">Make sure to use the same user across all Stack Exchange accounts. Once finished please close the browser.</string>
    <string name="register_on_site">Register on %1$s</string>
    <string name="register_on_site_contribute">Register to contribute to %1$s</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="restart">Restart</string>
    <string name="restart_to_install">Restart to install update</string>
    <string name="update_not_downloaded">Update not downloaded</string>
    <string name="download_error">Error downloading update</string>
    <string name="answer">Answer</string>
    <string name="post_answer">Post answer</string>
    <string name="discard">Discard</string>
    <string name="discard_answer">Are you sure you want to discard your changes?</string>
    <string name="markdown" translatable="false">Markdown</string>
    <string name="preview">Preview</string>
    <string name="post">Post</string>
    <string name="answer_error">This can\'t be blank</string>
    <string name="no_preview">No preview available</string>
    <string name="posting_answer">Posting answer…</string>
    <string name="post_answer_success">Successfully posted answer!</string>
    <string name="post_answer_error">Could not post answer</string>
    <string name="post_preview">Post as preview</string>
    <string name="last_edited_by">last edited by\n%1$s</string>
    <string name="settings">Settings</string>
    <string name="item_count" translatable="false">(%1$d)</string>
    <string name="no_comments">No comments found</string>
    <string name="open_browser">Open in browser</string>
    <string name="copy_question_content">Copy question content</string>
    <string name="copy_answer_content">Copy answer content</string>
    <string name="copy_title">Title</string>
    <string name="copy_body">Body</string>
    <string name="copy_body_markdown">Body markdown</string>
    <string name="copy_link">Share link</string>
    <string name="duplicate_question_notice">This question has been asked before and already has an answer:</string>
    <string name="not_suitable_notice">This question is not suitable for this site. It is not currently accepting answers.</string>
    <string name="needs_details_notice">This question needs details or clarity. It is not currently accepting answers.</string>
    <string name="needs_focus_notice">This question needs to be more focused. It is not currently accepting answers.</string>
    <string name="opinion_based_notice">This question is too opinion based. It is not currently accepting answers.</string>
    <string name="unknown_notice">This question was closed for an unknown reason.</string>
    <string name="ask_question">Ask Question</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="preview_success">Successfully posted as preview</string>
    <string name="draft_status_saving">Saving draft…</string>
    <string name="draft_status_saved">Draft saved!</string>
    <string name="draft_status_failed">Could not save draft</string>
    <string name="confirm">Confirm</string>
    <string name="delete_draft">Delete draft</string>
    <string name="delete_draft_summary">Are you sure you want to delete your draft?</string>
    <string name="confirm_existing_posts">I confirm that none of these existing posts answers my question.</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="review">Review</string>
    <string name="view">View</string>
    <string name="next">Next</string>
    <string name="start_page_title">Ask a public question</string>
    <string name="start_page_description">Posting a question to:</string>
    <string name="start_page_warning">Before asking a question, make sure it would be relevant to %1$s. Be sure to search the site to make sure your question hasn\'t been answered already.</string>
    <string name="title_page_description">Be specific and imagine you\'re asking a question to another person. Minimum %1$d characters.</string>
    <string name="title_page_hint">Summarize the problem here</string>
    <string name="details_page_title">What are the details of your question?</string>
    <string name="details_page_title_detailed">What are the details of your problem?</string>
    <string name="details_page_description">Include all the information someone would need to answer your question. Minimum %1$d characters.</string>
    <string name="details_page_description_detailed">Introduce the problem and expand on what you put in the title. Minimum %1$d characters.</string>
    <string name="details_page_hint">Explain your question</string>
    <string name="details_page_hint_detailed">Explain how you encountered the problem</string>
    <string name="expand_details_page_title">Provide any other details</string>
    <string name="expand_details_page_title_detailed">What did you try?</string>
    <string name="expand_details_page_description">Describe the question in more detail if needed. This step is optional.</string>
    <string name="expand_details_page_description_detailed">Describe what you tried, what you expected, and what actually resulted. Minimum %1$d characters.</string>
    <string name="expand_details_hint">Expand on the question</string>
    <string name="expand_details_hint_detailed">Expand on the problem</string>
    <string name="tags_page_title">Tags</string>
    <string name="tags_page_description">Add up to %1$d tags to describe what your question is about.</string>
    <string name="tags_page_hint">Start typing to see suggestions</string>
    <string name="duplicate_page_title">Review existing questions</string>
    <string name="duplicate_page_description">Click a post to review if your question is a duplicate.</string>
    <string name="duplicate_page_description_none">No potential duplicate questions found.</string>
    <string name="review_page_title">Review your question</string>
    <string name="review_page_description">Please do a final review of your question before attempting to post. Questions may be rejected due to low quality.</string>
    <string name="review_page_error">There was a problem posting your question:</string>
    <string name="has_accepted_answer">Has accepted answer</string>
    <string name="min_answers_title">Minimum answers</string>
    <string name="body_contains_title">Body contains</string>
    <string name="is_closed">Closed</string>
    <string name="tags_title">Tags (Comma separated)</string>
    <string name="title_contains_title">Title contains</string>
    <string name="filters">Filters</string>
    <string name="apply_filters">Apply filters</string>
    <string name="clear_filters">Clear</string>
    <string name="app">App</string>
    <string name="about">About</string>
    <string name="privacy">Privacy</string>
    <string name="experimental">Experimental</string>
    <string name="account">Account</string>
    <string name="debug">Debug</string>
    <string name="theme">Theme</string>
    <string name="source">Source</string>
    <string name="source_description">Stack is free and open-source on GitHub</string>
    <string name="libraries">Open source libraries</string>
    <string name="libraries_description">These awesome libraries helped make Stack possible</string>
    <string name="api">Powered by the Stack Exchange API</string>
    <string name="terms">Terms and conditions</string>
    <string name="support_development">Support development</string>
    <string name="support_development_summary">Show your support for the development of Stack!</string>
    <string name="current_site">Current site</string>
    <string name="inspect_network_traffic">Inspect network traffic</string>
    <string name="version">Version</string>
    <string name="syntax_highlighting">Syntax highlighting</string>
    <string name="syntax_highlighting_summary">Enables syntax highlighting for supported markdown code blocks</string>
    <string name="content_filters">Content filters</string>
    <string name="content_filters_clear">Clear all content filters</string>
    <string name="hot_network_questions_unable_to_load">Unable to load hot network questions</string>
    <string name="hot_network_questions_question_icon">Hot network question icon</string>
    <string name="hot_network_questions_fetch_new">Fetch new hot network question</string>
    <string name="hot_network_questions_title_preview">How do I undo the most recent local commits in Git?</string>
</resources>