<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/account">
        <Preference
            android:icon="@drawable/ic_account_circle"
            android:key="@string/account"
            android:title="@string/log_in" />
        <Preference
            android:key="@string/log_out"
            android:title="@string/log_out" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/current_site">
        <Preference
            android:key="@string/current_site"
            android:title="@string/current_site" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/experimental"
        android:layout="@layout/preference_category_layout"
        android:title="@string/experimental">
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_baseline_code"
            android:key="@string/syntax_highlighting"
            android:summary="@string/syntax_highlighting_summary"
            android:title="@string/syntax_highlighting" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/debug"
        android:layout="@layout/preference_category_layout"
        android:title="@string/debug">

        <Preference
            android:icon="@drawable/ic_baseline_traffic"
            android:key="@string/inspect_network_traffic"
            android:title="@string/inspect_network_traffic" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/content_filters"
        android:layout="@layout/preference_category_layout"
        android:title="@string/content_filters">

        <Preference
            android:icon="@drawable/ic_baseline_filter_list"
            android:key="@string/content_filters_clear"
            android:title="@string/content_filters_clear" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/app">
        <Preference
            android:icon="@drawable/ic_brightness_2"
            android:key="@string/theme"
            android:title="@string/theme" />

        <Preference
            android:icon="@drawable/ic_info"
            android:key="@string/version"
            android:title="@string/version" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_layout"
        android:title="@string/about">

        <Preference
            android:icon="@drawable/ic_baseline_favorite"
            android:key="@string/support_development"
            android:summary="@string/support_development_summary"
            android:title="@string/support_development" />

        <Preference
            android:icon="@drawable/ic_github"
            android:key="@string/source"
            android:summary="@string/source_description"
            android:title="@string/source" />

        <Preference
            android:icon="@drawable/ic_baseline_book"
            android:key="@string/libraries"
            android:summary="@string/libraries_description"
            android:title="@string/libraries" />

        <Preference
            android:icon="@drawable/ic_baseline_cloud"
            android:key="@string/api"
            android:title="@string/api" />

        <Preference
            android:key="@string/privacy"
            android:title="@string/privacy" />

        <Preference
            android:key="@string/terms"
            android:title="@string/terms" />
    </PreferenceCategory>

</PreferenceScreen>
