<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/hotQuestionIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/hot_network_questions_question_icon"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/hotNetworkQuestionTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/hot_network_questions_unable_to_load"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@android:color/black" />

    <ImageButton
        android:id="@+id/fetchNewHotQuestionButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hot_network_questions_fetch_new"
        android:src="@android:drawable/ic_popup_sync" />
</LinearLayout>
