<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@android:id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="0dp"
    android:theme="@style/Theme.Material3.DynamicColors.DayNight">

    <ImageView
        android:id="@+id/hotQuestionIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginVertical="16dp"
        android:contentDescription="@string/hot_network_questions_question_icon"
        android:src="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/hotNetworkQuestionTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingHorizontal="8dp"
        android:text="@string/hot_network_questions_title_preview"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <FrameLayout
        android:id="@+id/fetchNewHotQuestionButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground"
        android:paddingVertical="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/hot_network_questions_fetch_new"
            android:src="@drawable/ic_baseline_refresh"
            app:tint="?attr/colorOnSurface" />
    </FrameLayout>
</LinearLayout>
