<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/viewBackgroundColor"
        android:elevation="@dimen/default_app_bar_elevation"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabIndicatorFullWidth="false"
        app:tabSelectedTextColor="?android:attr/textColorPrimary"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="?android:attr/textColorSecondary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/markdown" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/markdownInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/text_input_box_color"
                        app:hintTextColor="@color/text_input_box_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/markdownEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|top"
                            android:imeOptions="flagNoExtractUi"
                            android:minHeight="@dimen/body_height"
                            android:theme="@style/TextInputEditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <me.tylerbwong.stack.markdown.MarkdownTextView
                        android:id="@+id/previewText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/answer_preview_background"
                        android:gravity="start|top"
                        android:minHeight="@dimen/body_height"
                        android:visibility="gone" />

                </FrameLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/debugPreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="80dp"
                    android:checked="true"
                    android:text="@string/post_preview" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/postAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/post"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimaryDark"
            app:backgroundTint="?attr/colorAccent"
            app:icon="@drawable/ic_send"
            app:iconTint="@color/colorTextPrimaryDark"
            app:layout_anchor="@id/scrollView"
            app:layout_anchorGravity="bottom|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
